--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,8 @@
     <string name="btn_add_weight">New weight entry</string>
     <string name="btn_weight_history">Weight history</string>
     <string name="title_weight_tracker">Weight tracker</string>
+    <string name="btn_add_measurements">New measurement entry</string>
+    <string name="btn_measurement_history">Measurement history</string>
+    <string name="title_measurement_tracker">Measurement tracker</string>
 
 </resources>
