Added Camera functionality, pics saved to ext storage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,9 @@
     <string name="title_measurement_tracker">Measurement tracker</string>
     <string name="btn_add_photo">New progress photo</string>
     <string name="title_photo_tracker">Photo tracker</string>
+    <string name="hip_circumference">Enter hip circumference</string>
+    <string name="enter_waist_circumference">Enter waist circumference</string>
+    <string name="enter_breast_circumference">Enter breast circumference</string>
+    <string name="add_measurements">Add measurements</string>
 
 </resources>
